--- a/Css/Estilo.css
+++ b/Css/Estilo.css
@@ -1,7 +1,14 @@
+
+   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 * {
-    margin: 10;
     box-sizing: border-box;
-}
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    margin: 10;
+    }
 
 BODY {
    color:rgb(157, 202, 157);
@@ -45,7 +52,7 @@ h2
 }
 ul
 {
-   color:rgb(200, 197, 206);
+   color:rgb(198, 193, 193);
    border-width:2px;
    border-color:rgb(3, 3, 36);
    border-style:solid;
@@ -70,4 +77,22 @@ th, td {
 th {
   background-color: #101547;
 }
-
+body {
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 4.5rem;
+}
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 4.5rem;
+}
+.fa-brands {
+    margin: 1%;
+    font-size: 4rem;
+    position: fixed;
+    bottom: 5%;
+    right: 2%;
+    z-index: 20;
+}
